2013-04-24 Riccardo Mottola <rm@gnu.org>

	* DBSObject.h
	* DBSObject.m
	RecordTypes accessors.

2013-04-23 Riccardo Mottola <rm@gnu.org>

	* DBProgress.h
	* DBProgress.m
	ProgressIndicator setter and update.

	* AppController.h
	* AppController.m
	* Resources/DataBasin.gorm
	ProgressIndicator for Query.

2013-04-14 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeUpdate)
	* DBSoap.m
	Clean up and write consistent error results even with missing data.

2013-04-13 Riccardo Mottola <rm@gnu.org>

	* AppController.m (executeUpdate)
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	Return update results and write them to results.csv.

2013-04-04 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Remove dead code.

2013-04-04 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	* DBSoap.h
	* DBSoap.m
	* DBSoapCSV.h
	* DBSoapCSV.m
	progressMonitor infrastructure for delete.

2013-04-03 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Write Delete results to results.csv in the same directory as the source file.

2013-04-02 Riccardo Mottola <rm@gnu.org>

	* DBCVSWriter.[h,m] (formatOneLine)
	Allow a single-complex object at top-level, not just arrays

2013-03-15 Riccardo Mottola <rm@gnu.org>

	* DBSObject.[h,m]
	(removeField) added method.

2013-02-24 Riccardo Mottola <rm@gnu.org>

	* DBObjectInspector.m
	NSInteger transition

	* DBSoap.h
	Old Mac defines for NSInteger type and similar

	* DBSoap.m
	* DBSObject.m
	Warning fixes.

2013-02-23 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Use correct DBCVSReader init method.

2013-02-01 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Initialize qLoc to nil.

2013-02-01 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Load fields also of a deleted object.

2013-01-31 Riccardo Mottola <rm@gnu.org>

	* DBSoapCSV.m
	Catch, cleanup and rethrow the exception

2013-01-29 Riccardo Mottola <rm@gnu.org>

	* DBCVSReader.m
	Remove debug statements.

2013-01-29 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m