@@ -2,13 +2,13 @@
     "!" = "Generated by ProjectCenter, do not edit";
     ApplicationDescription = "SOAP Data Access Tool";
     ApplicationName = DataBasin;
-    ApplicationRelease = "0.6";
+    ApplicationRelease = "0.7b1";
     Authors = (
 	"Riccardo Mottola"
     );
     Copyright = "Copyright (C) 2008-2013";
     CopyrightDescription = "Released under GPL";
-    FullVersionID = "0.6";
+    FullVersionID = "0.7b1";
     NSExecutable = DataBasin;
     NSMainNibFile = "DataBasin.gorm";
     NSPrincipalClass = NSApplication;
